--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header>
-        <ul>
-            <li>Nuevo post</li>
+        <ul class="navbar">
+            <li>logo</li>
             <li>Iniciar sesión</li>
             <li>Registro</li>
             <li>Busqueda</li>
