agregar logo y estilos del logo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <header>
         <ul class="navbar">
-            <li>logo</li>
+            <li>
+                <img class="logo" src="./media/logo-perro.ico" alt="imagen"/>
+            </li>
             <li>Iniciar sesión</li>
             <li>Registro</li>
             <li>Busqueda</li>
