agregan boton nuevo post y sus estilos

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <header>
         <ul class="navbar">
             <li>logo</li>
-            <li>Iniciar sesión</li>
+            <li>
+                <button class="mainButton">Nuevo post</button>
+            </li>
             <li>Registro</li>
             <li>Busqueda</li>
         </ul>
