agregar estilos para el boton de registro

--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
             <li>
                 <button class="mainButton">Nuevo post</button>
             </li>
-            <li>Registro</li>
             <li>Busqueda</li>
+            <li>Iniciar sesión</li>
+            <li>
+                <button class="mainButton">Registro</button>  
+            </li>
+
         </ul>
 
     </header>
