--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
         <ul class="navbar">
             <li>logo</li>
             <li>
-                <button class="mainButton">Nuevo post</button>
+                <button class="button mainButton">Nuevo post</button>
             </li>
             <li>Busqueda</li>
-            <li>Iniciar sesión</li>
             <li>
-                <button class="mainButton">Registro</button>  
+                <button class=" button secondaryButton">Iniciar sesión</button>
+            </li>
+            <li>
+                <button class="button mainButton">Registro</button>  
             </li>
 
         </ul>
