agrega cuadro de busqueda con sus estilos

--- a/index.html
+++ b/index.html
@@ -5,16 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/estilos.css" />
-     <link rel="shortcut icon" href="./media/icono_perro.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="./media/icono_perro.ico" type="image/x-icon" />
+    <script src="https://kit.fontawesome.com/d4cd33a1a3.js" crossorigin="anonymous"></script>
     <title>Razas de perros</title>
  </head>
 <body>
     <header>
         <ul class="navbar">
             <li>logo</li>
+            <li>nuevo post</li>
+            <li>
+                <div class="buscar">
+                    <input placeholder="buscar una raza"/>
+                    <i class="fas fa-search"></i>
+                </div>
+            </li>
             <li>Iniciar sesión</li>
             <li>Registro</li>
-            <li>Busqueda</li>
         </ul>
 
     </header>
