solucionar conflictos finales del sprint1

--- a/index.html
+++ b/index.html
@@ -12,33 +12,22 @@
 <body>
     <header>
         <ul class="navbar">
-            <li>logo</li>
-            <li>nuevo post</li>
+            <li>
+                <img class="logo" src="./media/logo-perro.ico" alt="imagen"/>
+            </li>
+            <li>
+                <button class="button mainButton">Nuevo post</button>
+            </li>
             <li>
                 <div class="buscar">
                     <input placeholder="buscar una raza"/>
                     <i class="fas fa-search"></i>
                 </div>
-        <ul class="navbar">         
-            <li>
-                <button class="button mainButton">Nuevo post</button>
             </li>
-            <li>
-                <img class="logo" src="./media/logo-perro.ico" alt="imagen"/>
-            </li>
-            <li>Iniciar sesión</li>
 
-            <li>Registro</li>
-
-            <li>Busqueda</li>
-            <li>
-                <button class=" button secondaryButton">Iniciar sesión</button>
-            </li>
-            <li>
-                <button class="button mainButton">Registro</button>  
-            </li>
+            <li><button class=" button secondaryButton">Iniciar sesión</button></li>
+            <li><button class="button mainButton">Registro</button></li>      
         </ul>
-
     </header>
     <main>
         <section></section>
