--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
                 <img class="logo" src="./media/logo-perro.ico" alt="imagen"/>
             </li>
             <li>
-                <button class="button mainButton">Nuevo post</button>
+                <button class="botonGenerico mainButton">Nuevo post</button>
             </li>
             <li>
                 <div class="buscar">
                     <input placeholder="buscar una raza"/>
-                    <i class="fas fa-search"></i>
+                    <i class="botonGenerico fas fa-search iconobusqueda"></i>
                 </div>
             </li>
 
-            <li><button class=" button secondaryButton">Iniciar sesión</button></li>
-            <li><button class="button mainButton">Registro</button></li>      
+            <li><button class="botonGenerico secondaryButton">Iniciar sesión</button></li>
+            <li><button class="botonGenerico mainButton">Registro</button></li>      
         </ul>
     </header>
     <main>
