se agregan imagenes con los estilos de las imagenes

--- a/index.html
+++ b/index.html
@@ -32,6 +32,68 @@
     <main>
         <section>
             <h1>Razas de perros</h1>
+            <ul class="breedcardcontainer">
+                <li class="breedcard">
+                    <div class="contenedorimagen">
+                        <img src="./media/Akita.jpg" alt="Akita"/>
+                    </div>
+                Akita  
+                </li> 
+                <li class="breedcard">
+                    <div class="contenedorimagen">
+                        <img src="./media/Bulldog inglés.jpg" alt="Bulldog inglés"/>
+                    </div> 
+                Bulldog inglés 
+                </li> 
+                <li class="breedcard">
+                    <div class="contenedorimagen">
+                        <img src="./media/Cavalier king charles spaniel.jpg" alt="Cavalier king charles spaniel"/>
+                    </div>  
+                Cavalier king charles spaniel
+                </li> 
+                <li class="breedcard">
+                    <div class="contenedorimagen">
+                        <img src="./media/Chow-chow.jpg" alt="Chow-chow"/>
+                    </div>  
+                Chow-chow
+                </li> 
+                <li class="breedcard">
+                    <div class="contenedorimagen">
+                        <img src="./media/Löwchen.jpg" alt="Löwchen"/>
+                    </div>
+                Löwchen  
+                </li>
+                <li class="breedcard">
+                    <div class="contenedorimagen">
+                        <img src="./media/Mastín argentino.jpg" alt="Mastín argentino"/>
+                    </div> 
+                Mastín argentino 
+                </li>
+                <li class="breedcard">
+                    <div class="contenedorimagen">
+                        <img src="./media/Mastín Tibetano.jpg" alt="Mastín Tibetano"/>
+                    </div>  
+                Mastín Tibetano
+                </li>
+                <li class="breedcard">
+                    <div class="contenedorimagen">
+                        <img src="./media/Podenco faraónico.jpg" alt="Podenco faraónico"/>
+                    </div>  
+                Podenco faraónico
+                </li>
+                <li class="breedcard">
+                    <div class="contenedorimagen">
+                        <img src="./media/Rottweiler.jpg" alt="Rottweiler"/>
+                    </div>  
+                Rottweiler
+                </li>
+                <li class="breedcard">
+                    <div class="contenedorimagen">
+                        <img src="./media/Samoyedo.jpg" alt="Samoyedo"/>
+                    </div>  
+                Samoyedo
+                </li>
+            </ul>
         </section>
         <section></section>
     </main>
